--- a/menu/index.html
+++ b/menu/index.html
@@ -503,36 +503,12 @@
             <div class="panel-menu-n">
                 <div class="row">
                     <div class="large-12 medium-12 small-12 columns">
-                        <h2 class="subheader">Birre artigianali in bottiglia<br><small>50+ birre che cambiano a ritmi da vertigine. Oggi c'è, domani ne trovi un'altra</small></h2>
+                        <h2 class="subheader">Birre artigianali in bottiglia<br><small>birre che cambiano a ritmi da vertigine. Oggi c'è, domani ne trovi un'altra</small></h2>
                         <h2 class="subheader"><small>ipa</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Coronado Sock IPA<span class="right">6,5</span></h3>
-                                <p>8,5% 37,5cl</p>
-                            </li>
-                            <li>
-                                <h3>Mad Hat Drink My Peach<span class="right">5,5</span></h3>
-                                <p>6,8% 33cl</p>
-                            </li>
-                            <li>
-                                <h3>Monkey IPA<span class="right">5</span></h3>
-                                <p>6,5% 33cl</p>
-                            </li>
-                            <li>
-                                <h3>Napar Alien Claw Belgian IPA<span class="right">6</span></h3>
-                                <p>6,8% 33cl</p>
-                            </li>
-                            <li>
-                                <h3>Napar Sunset Session IPA<span class="right">6</span></h3>
-                                <p>4,2% 33cl</p>
-                            </li>
-                            <li>
-                                <h3>The Hop Concept<span class="right">16</span></h3>
-                                <p>8,5% 66cl</p>
-                            </li>
-                             <li>
-                                <h3>Trestles IPA<span class="right">5,5</span></h3>
-                                <p>6,8% 35,5cl</p>
+                                <h3>Birrificio Castelli Extrema Niger<span class="right">6</span></h3>
+                                <p>7,2% 33cl</p>
                             </li>
                         </ul>
                         <h2 class="subheader"><small>ale</small></h2>
@@ -542,45 +518,30 @@
                                 <p>6,2% 33cl</p>
                             </li>
                             <li>
-                                <h3>EvilTwin Citra Sunshine<span class="right">7,5</span></h3>
-                                <p>4,5% 50cl</p>
+                                <h3>Birrificio Castelli Caput Mundi<span class="right">12</span></h3>
+                                <p>10% 75cl</p>
                             </li>
                             <li>
-                                <h3>EvilTwin XXX<span class="right">18</span></h3>
-                                <p>9,5% 66cl</p>
+                                <h3>Birrificio Castelli Repetita Iuvant<span class="right">5</span></h3>
+                                <p>6,5% 33cl</p>
                             </li>
                             <li>
-                                <h3>Napar ZZ Amber Ale<span class="right">5,5</span></h3>
-                                <p>5,5% 33cl</p>
-                            </li>
-                            <li>
-                                <h3>Mukkeller Zero Tituli<span class="right">5</span></h3>
+                                <h3>MC-77 Mild the Gap<span class="right">5</span></h3>
                                 <p>4,5% 33cl</p>
                             </li>
                             <li>
-                                <h3>Nomada Estepa Red Hoppy<span class="right">5</span></h3>
-                                <p>5,5% 33cl</p>
-                            </li>
-                            <li>
-                                <h3>Nomada Tundra  Golden Ale<span class="right">5</span></h3>
-                                <p>6% 33cl</p>
+                                <h3>Mukkeller Marina<span class="right">6</span></h3>
+                                <p>6% 50cl</p>
                             </li>
                         </ul>
-                        <h2 class="subheader"><small>pale ale</small></h2>
+                        <h2 class="subheader"><small>pils, bock, dunkel, keller</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Napar Pale Ale<span class="right">5,5</span></h3>
-                                <p>5,1% 33cl</p>
+                                <h3>Auer Pilsner<span class="right">5</span></h3>
+                                <p>4,9% 50cl</p>
                             </li>
                             <li>
-                                <h3>Castelli Brevis Furor<span class="right">5</span></h3>
-                                <p>6,3% 33cl</p>
-                            </li>
-                        </ul>
-                        <h2 class="subheader"><small>PILS</small></h2>
-                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
-                            <li>
-                                <h3>Mukkeller Pils<span class="right">6</span></h3>
+                                <h3>Gambrinus Zoigl<span class="right">5</span></h3>
                                 <p>5,2% 50cl</p>
                             </li>
                         </ul>
@@ -589,6 +550,29 @@
                             <li>
                                 <h3>Rocket Zaccharine Barley Wine<span class="right">9</span></h3>
                                 <p>7,6% 33cl</p>
+                            </li>
+                        </ul>
+                        <h2 class="subheader"><small>blanche, weisse, abazzia</small></h2>
+                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
+                            <li>
+                                <h3>Irseer Klosterstarkbier<span class="right">6</span></h3>
+                                <p>7% 50cl</p>
+                            </li>
+                            <li>
+                                <h3>Manerba Fiordalisa<span class="right">5</span></h3>
+                                <p>5% 33cl</p>
+                            </li>
+                            <li>
+                                <h3>Manerba La Rocca<span class="right">12</span></h3>
+                                <p>7% 75cl</p>
+                            </li>
+                            <li>
+                                <h3>Manerba Weizen<span class="right">5</span></h3>
+                                <p>5% 33cl</p>
+                            </li>
+                            <li>
+                                <h3>Zötler Hefewaizen<span class="right">6</span></h3>
+                                <p>5,2% 50cl</p>
                             </li>
                         </ul>
                         <h2 class="subheader"><small>Stout e Porter</small></h2>
@@ -613,12 +597,12 @@
                                 <p>6% 75cl</p>
                             </li>
                             <li>
-                                <h3>Crooked Stave Citrus<span class="right">15</span></h3>
-                                <p>5,5% 37,5cl</p>
-                            </li>
-                            <li>
                                 <h3>Crooked Stave Cranberry<span class="right">15</span></h3>
                                 <p>4,5% 37,5cl</p>
+                            </li>
+                            <li>
+                                <h3>Crooked Stave Progenitor<span class="right">15</span></h3>
+                                <p>6,2% 37,5cl</p>
                             </li>
                             <li>
                                 <h3>Crooked Stave Surette<span class="right">15</span></h3>
