--- a/menu/index.html
+++ b/menu/index.html
@@ -477,24 +477,24 @@
                                 <p>hell 4,9%</p>
                             </li>
                             <li>
-                                <h3>MC77 Ape Regina<span class="right"> 4 | 6</span></h3>
-                                <p>belgian ale al miele 6,9%</p>
-                            </li>
-                            <li>
                                 <h3>MC 77 Bastogne<span class="right"> 4 | 6</span></h3>
                                 <p>american pale ale 6,2%</p>
+                            </li>
+                            <li>
+                                <h3>MC77 Insomnia<span class="right"> 4 | 6</span></h3>
+                                <p>ipa al caffè 7,5%</p>
                             </li>
                             <li>
                                 <h3>MC77 Sofronia<span class="right"> 4 | 6</span></h3>
                                 <p>blanche con ibisco 5%</p>
                             </li>
                             <li>
-                                <h3>Mukkeller Corva Nera<span class="right"> 4 | 6</span></h3>
-                                <p>stout 5,7%</p>
-                            </li>
-                            <li>
                                 <h3>Mukkeller Hattori Hanzo<span class="right"> 4 | 6</span></h3>
                                 <p>doppia ipa 8,3%</p>
+                            </li>
+                            <li>
+                                <h3>Mukkeller PSE<span class="right"> 4 | 6</span></h3>
+                                <p>golden ale 5,6%</p>
                             </li>
                         </ul>
                     </div>
