--- a/menu/index.html
+++ b/menu/index.html
@@ -465,11 +465,11 @@
                         <h2 class="subheader">Birre artigianali alla Spina <br><small>Otto spine che cambiano a ritmi da vertigine. Oggi c'è, domani ne trovi un'altra</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Birrificio dei Castelli Palmares<span class="right"> 4 | 6</span></h3>
+                                <h3>Castelli Palmares<span class="right"> 4 | 6</span></h3>
                                 <p>red ale 5,6%</p>
                             </li>
                             <li>
-                                <h3>Birrificio Emiliano Tropicale<span class="right"> 4 | 6</span></h3>
+                                <h3>Emiliano Tropicale<span class="right"> 4 | 6</span></h3>
                                 <p>light IPA 4,7%</p>
                             </li>
                             <li>
@@ -507,22 +507,22 @@
                         <h2 class="subheader"><small>ipa</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Birrificio Castelli Extrema Niger<span class="right">6</span></h3>
+                                <h3>Castelli Extrema Niger<span class="right">6</span></h3>
                                 <p>7,2% 33cl</p>
                             </li>
                         </ul>
                         <h2 class="subheader"><small>ale</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Birrificio del Borgo Maledetta<span class="right">5</span></h3>
+                                <h3>Borgo Maledetta<span class="right">5</span></h3>
                                 <p>6,2% 33cl</p>
                             </li>
                             <li>
-                                <h3>Birrificio Castelli Caput Mundi<span class="right">12</span></h3>
+                                <h3>Castelli Caput Mundi<span class="right">12</span></h3>
                                 <p>10% 75cl</p>
                             </li>
                             <li>
-                                <h3>Birrificio Castelli Repetita Iuvant<span class="right">5</span></h3>
+                                <h3>Castelli Repetita Iuvant<span class="right">5</span></h3>
                                 <p>6,5% 33cl</p>
                             </li>
                             <li>
