update opening hours

--- a/menu/cibo/buffalo-chicken-wings.html
+++ b/menu/cibo/buffalo-chicken-wings.html
@@ -179,21 +179,12 @@
             <div class="small-6 medium-3 large-3 large-collapse columns" itemscope itemtype="http://schema.org/Restaurant">
                 <h4 class="subheader">Orari apertura</h4>
                 <meta itemprop="openingHours" content="We,Th,Fr,Sa,Su 19:00-23:00">
-                <meta itemprop="openingHours" content="Su 12:00-14:00">
                 <div class="row">
                     <div class="large-5 medium-5 small-6 columns">
-                        <p>Mer-Sab</p>
+                        <p>Mer-Dom</p>
                     </div>
                     <div class="large-7 medium-7 small-6 columns">
                         <p>19&ensp;&ndash;&ensp;23</p>
-                    </div>
-                </div>
-                <div class="row">    
-                    <div class="large-5 medium-5 small-6 columns">
-                        <p>Domenica</p>
-                    </div>
-                    <div class="large-7 medium-7 small-6 columns">
-                        <p>12&ensp;&ndash;&ensp;14<br>19&ensp;&ndash;&ensp;23</p>
                     </div>
                 </div>
                 <p><em>Chiuso Lunedì e Martedì</em></p>
