--- a/menu/index.html
+++ b/menu/index.html
@@ -76,9 +76,9 @@
                 <li class="tab-title active" role="presentational">
                     <a href="#cena" role="tab" tabindex="0" aria-selected="true" controls="cena">Cena</a>
                 </li>
-                <li class="tab-title" role="presentational">
+                <!-- <li class="tab-title" role="presentational">
                     <a href="#pranzo" role="tab" tabindex="3" aria-selected="false" controls="pranzo">Pranzo</a>
-                </li>
+                </li> -->
                 <li class="tab-title" role="presentational">
                     <a href="#birra" role="tab" tabindex="1" aria-selected="false" controls="birra">Birre</a>
                 </li>
@@ -275,7 +275,7 @@
         </section>
 <!-- cena fine -->
 <!-- pranzo inizio-->
-        <section class="content" role="tabpanel" aria-hidden="true" id="pranzo">
+        <!-- <section class="content" role="tabpanel" aria-hidden="true" id="pranzo">
             <div class="panel-menu-n">
                 <div class="row">
                     <div class="large-12 medium-12 columns">
@@ -376,19 +376,6 @@
                     </div>   
                 </div>
             </div>
-            <!-- <div class="panel-menu-n">
-                <div class="row">
-                    <div class="large-12 medium-12 small-12 columns">
-                        <h2 class="subheader">Zuppe <br></h2>
-                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
-                            <li>
-                                <h3>Vellutata di Carote<span class="right">4,5</span></h3>    
-                                <p>zuppa di carote con zenzero</p>
-                            </li>
-                        </ul>                      
-                    </div>
-                </div>
-            </div> -->
             <div class="panel-menu-2n">
                 <div class="row">
                     <div class="large-12 medium-12 small-12 columns">
@@ -455,7 +442,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 <!-- pranzo fine -->
 <!-- birra -->
         <section class="content" role="tabpanel" aria-hidden="false" id="birra">
