--- a/eventi/flora-e-fauna-concerto-live.html
+++ b/eventi/flora-e-fauna-concerto-live.html
@@ -11,14 +11,14 @@
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2016"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@beerstrot"/>
-    <meta name="twitter:title" content="L'estate festeggiamola con i Flora e Fauna"/>
+    <meta name="twitter:title" content="Flora e Fauna Live"/>
     <meta name="twitter:description" content="Musica live a Ca' Vecchia Beerstrot con i Flora e Fauna"/>
     <meta name="twitter:image" content="http://www.beerstrot.it/asset/img/large/flora-e-fauna-concerto-live.jpg"/>
     <meta name="twitter:url" content="http://www.beerstrot.it/eventi/flora-e-fauna-concerto-live.html"/>
     <meta property="fb:app_id" content="1549149915357715"/>
     <meta property="og:url" content="http://www.beerstrot.it/eventi/flora-e-fauna-concerto-live.html"/>
     <meta property="og:type" content="article"/>
-    <meta property="og:title" content="L'estate festeggiamola con i Flora e Fauna"/>
+    <meta property="og:title" content="Flora e Fauna Live"/>
     <meta property="og:description" content="Musica live a Ca' Vecchia Beerstrot con i Flora e Fauna"/>
     <meta property="og:image:url" content="http://www.beerstrot.it/asset/img/large/flora-e-fauna-concerto-live.jpg"/>
     <link rel="icon" href="http://www.beerstrot.it/asset/img/thumbs/favicon.png">
