--- a/asporto/index.html
+++ b/asporto/index.html
@@ -175,8 +175,8 @@
                             <p>180 grammi di petto di pollo, fontina, cipolla caramellata, rucola, salsa allo yogurt</p>
                         </li>
                         <li>
-                            <h3><a href="http://www.beerstrot.it/menu/cibo/cecilia.html">Cecilia<span class="right">8</span></a></h3>    
-                            <p>180 grammi di ceci e avocado con composta leggermente piccante di verdure e menta</p>
+                            <h3>Vegetariano<span class="right">8</span></h3>    
+                            <p>180 grammi di hamburger di tofu e zucchine, pomodorini confit e rucola</p>
                         </li>
                     </ul>                      
                 </div>   
