--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     <div class="panel-home-n">
         <div class="row">
             <div class="medium-6 large-6 medium-offset-6 large-offset-6 columns">
-                <h1>Lato Social</h1>
+                <h1>Le Nostre Foto</h1>
             </div>
         </div>
         <div class="row">
@@ -155,9 +155,9 @@
                 <a role="button" href="http://www.beerstrot.it/social/"><img src="http://www.beerstrot.it/asset/img/medium/social.jpg" alt="Scopri il Lato Social" class="extra-space-image-tab-home"></a>
             </div>
             <div class="medium-6 large-6 columns">
-                <p>Dillo con un hashtag: pubblica le tue foto e video con <code>#beerstrot</code> o <code>#cavecchiabeerstrot</code> e appariranno nel <a href="http://www.beerstrot.it/social/">Lato Social</a> di Ca' Vecchia Beerstrot. 
+                <p>Dillo con un hashtag: pubblica le tue foto e video con <code>#cavecchiabeerstrot</code> e appariranno in <a href="http://www.beerstrot.it/social/">Le Nostre Foto</a>. 
                 <p>Cosa dice il web di Ca' Vecchia Beerstrot: recensioni e commenti.</p>
-                <a role="button" href="http://www.beerstrot.it/social/">Scopri il Lato Social &rarr;</a>
+                <a role="button" href="http://www.beerstrot.it/social/">Guarda Le Nostro Foto &rarr;</a>
             </div>
         </div>
     </div>
