--- a/social/index.html
+++ b/social/index.html
@@ -67,7 +67,7 @@
         </div>
     </header>
  <!-- inizio tabbar switch-->
-    <div class="row">
+    <!-- <div class="row">
         <div class="medium-12 large-12 small-12 columns extra-space-hero">
             <ul class="tabs" data-tab data-options="deep_linking:true; scroll_to_content:false" role="tablist">
                 <li class="tab-title active" role="presentational">
@@ -78,12 +78,12 @@
                 </li>
             </ul>
         </div>
-    </div>
+    </div> -->
 <!-- fine tabbar switch-->
 <!-- tab inizio--> 
-    <div class="tabs-content"> 
+<!--     <div class="tabs-content">  -->
 <!-- tab post inizio--> 
-        <section class="content active" role="tabpanel" aria-hidden="false" id="post">
+        <!-- <section class="content active" role="tabpanel" aria-hidden="false" id="post"> -->
             <div class="panel-home-n">
                 <div class="row">
                     <div class="medium-12 large-12 columns">
@@ -93,10 +93,10 @@
                     </div>
                 </div>
             </div>
-        </section>
+   <!--      </section> -->
 <!-- tab post fine-->
 <!-- tab review inizio--> 
-        <section class="content" role="tabpanel" aria-hidden="false" id="review">
+        <!-- <section class="content" role="tabpanel" aria-hidden="false" id="review">
             <div class="row extra-space">
                 <div class="medium-6 large-6 columns">
                     <h3>Cosa dicono i clienti</h3>
@@ -287,9 +287,9 @@
                     </article> 
                 </div>
             </div>
-        </section>                
+        </section>                 -->
  <!-- tab review fine--> 
-     </div>
+<!--      </div> -->
  <!-- tab fine-->                      
 <!-- inizio footer -->
     <footer class="panel-prefooter">
