--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             </div>
             <div class="medium-6 large-6 columns">
                 <p>Dillo con un hashtag: pubblica le tue foto e video con <<code>#beerstrot</code>e appariranno in <a href="http://www.beerstrot.it/social/">Le Nostre Foto</a>. 
-                <p>Cosa dice il web di Ca' Vecchia Beerstrot: recensioni e commenti.</p>
+                <!-- <p>Cosa dice il web di Ca' Vecchia Beerstrot: recensioni e commenti.</p> -->
                 <a role="button" href="http://www.beerstrot.it/social/">Guarda Le Nostro Foto &rarr;</a>
             </div>
         </div>
