--- a/social/index.html
+++ b/social/index.html
@@ -61,7 +61,7 @@
     </nav>
 <!-- fine navbar con hamburger -->
     <header class="row">
-        <div class="medium-12 large-12 columns">
+        <div class="medium-12 large-12 columns no-margin-list-bullet">
             <h1>Le Nostre Foto</h1>
             <hr>
         </div>
@@ -86,7 +86,7 @@
         <!-- <section class="content active" role="tabpanel" aria-hidden="false" id="post"> -->
             <div class="panel-home-n">
                 <div class="row">
-                    <div class="medium-12 large-12 columns">
+                    <div class="medium-12 large-12 columns no-margin-list-bullet">
                         <script src="//assets.juicer.io/embed.js" type="text/javascript"></script>
                         <link href="//assets.juicer.io/embed.css" media="all" rel="stylesheet" type="text/css" />
                         <ul class="juicer-feed" data-feed-id="beerstrot" data-gutter="15"></ul>
