--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 <a role="button" href="http://www.beerstrot.it/social/"><img src="http://www.beerstrot.it/asset/img/medium/social.jpg" alt="Scopri il Lato Social" class="extra-space-image-tab-home"></a>
             </div>
             <div class="medium-6 large-6 columns">
-                <p>Dillo con un hashtag: pubblica le tue foto e video con <<code>#beerstrot</code>e appariranno in <a href="http://www.beerstrot.it/social/">Le Nostre Foto</a>. 
+                <p>Dillo con un hashtag: pubblica le tue foto e video con <code>#beerstrot</code> o <code>#cavecchiabeerstrot</code>.</p>
                 <!-- <p>Cosa dice il web di Ca' Vecchia Beerstrot: recensioni e commenti.</p> -->
                 <a role="button" href="http://www.beerstrot.it/social/">Guarda Le Nostro Foto &rarr;</a>
             </div>
