--- a/social/index.html
+++ b/social/index.html
@@ -61,7 +61,7 @@
     </nav>
 <!-- fine navbar con hamburger -->
     <header class="row">
-        <div class="medium-12 large-12 columns no-margin-list-bullet">
+        <div class="medium-12 large-12 columns">
             <h1>Le Nostre Foto</h1>
             <hr>
         </div>
