--- a/social/index.html
+++ b/social/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
-    <title>Beerstrot | Social Immagini Commenti e Recensioni</title>
+    <title>Beerstrot | Social | Le Nostre Immagini</title>
     <meta name="description" content="Le foto, i commenti e le review su Ca' Vecchia Beerstrot"/>
     <link rel="author" href="google.com/+cavecchiabeerstrotfilottrano"/>
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
