--- a/social/index.html
+++ b/social/index.html
@@ -5,14 +5,27 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
     <title>Beerstrot | Social | Le Nostre Immagini</title>
-    <meta name="description" content="Le foto, i commenti e le review su Ca' Vecchia Beerstrot"/>
+    <meta name="description" content="Le nostre foto di Ca' Vecchia Beerstrot"/>
     <link rel="author" href="google.com/+cavecchiabeerstrotfilottrano"/>
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2016"/>
+    <meta name="p:domain_verify" content="ca68ebe696c4699798a5a243ca187b2d"/>
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:site" content="@beerstrot"/>
+    <meta name="twitter:title" content="Beerstrot | Social | Le Nostre Immagini"/>
+    <meta name="twitter:description" content="Le nostre foto di Ca' Vecchia Beerstrot"/>
+    <meta name="twitter:image" content="http://www.beerstrot.it/asset/img/medium/social.jpg"/>
+    <meta name="twitter:url" content="http://www.beerstrot.it"/>
+    <meta property="fb:app_id" content="1549149915357715"/>
+    <meta property="og:url" content="http://www.beerstrot.it"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="Beerstrot | Social | Le Nostre Immagini"/>
+    <meta property="og:description" content="Le nostre foto di Ca' Vecchia Beerstrot"/>
+    <meta property="og:image:url" content="http://www.beerstrot.it/asset/img/medium/social.jpg"/>
     <meta property="fb:app_id" content="1549149915357715"/>
     <link rel="icon" href="http://www.beerstrot.it/asset/img/thumbs/favicon.png">
     <link rel="canonical" href="http://www.beerstrot.it/social/"/>
-    <link rel="stylesheet" href="../css/app.css"/>
+    <link rel="stylesheet" href="http://www.beerstrot.it/css/app.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
     <!-- Facebook Pixel Code -->
