--- a/social/index.html
+++ b/social/index.html
@@ -17,7 +17,7 @@
     <meta name="twitter:image" content="http://www.beerstrot.it/asset/img/medium/social.jpg"/>
     <meta name="twitter:url" content="http://www.beerstrot.it"/>
     <meta property="fb:app_id" content="1549149915357715"/>
-    <meta property="og:url" content="http://www.beerstrot.it"/>
+    <meta property="og:url" content="http://www.beerstrot.it/social/"/>
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="Beerstrot | Social | Le Nostre Immagini"/>
     <meta property="og:description" content="Le nostre foto di Ca' Vecchia Beerstrot"/>
