--- a/social/index.html
+++ b/social/index.html
@@ -15,7 +15,7 @@
     <meta name="twitter:title" content="Beerstrot | Social | Le Nostre Immagini"/>
     <meta name="twitter:description" content="Le nostre foto di Ca' Vecchia Beerstrot"/>
     <meta name="twitter:image" content="http://www.beerstrot.it/asset/img/medium/social.jpg"/>
-    <meta name="twitter:url" content="http://www.beerstrot.it"/>
+    <meta name="twitter:url" content="http://www.beerstrot.it/social/"/>
     <meta property="fb:app_id" content="1549149915357715"/>
     <meta property="og:url" content="http://www.beerstrot.it/social/"/>
     <meta property="og:type" content="website"/>
