--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     <div class="panel-home-n">
         <div class="row">
             <div class="medium-6 large-6 medium-offset-6 large-offset-6 columns">
-                <h1>Le Nostre Foto</h1>
+                <h1>I Nostri Scatti</h1>
             </div>
         </div>
         <div class="row">
@@ -155,9 +155,10 @@
                 <a role="button" href="http://www.beerstrot.it/social/"><img src="http://www.beerstrot.it/asset/img/medium/social.jpg" alt="Scopri il Lato Social" class="extra-space-image-tab-home"></a>
             </div>
             <div class="medium-6 large-6 columns">
+                <p>Sei social?</p>
                 <p>Dillo con un hashtag: pubblica le tue foto e video con <code>#beerstrot</code> o <code>#cavecchiabeerstrot</code>.</p>
                 <!-- <p>Cosa dice il web di Ca' Vecchia Beerstrot: recensioni e commenti.</p> -->
-                <a role="button" href="http://www.beerstrot.it/social/">Guarda Le Nostro Foto &rarr;</a>
+                <a role="button" href="http://www.beerstrot.it/social/">Guarda I Nostri Scatti &rarr;</a>
             </div>
         </div>
     </div>
