update opening hours

--- a/asporto/index.html
+++ b/asporto/index.html
@@ -65,7 +65,7 @@
         <div class="medium-12 large-12 columns">
             <h1>Asporto</h1>
             <hr>
-            <p>Dal Martedì alla Domenica dalle 18:30 alle 20:00</p>
+            <p>Dal Mercoledì alla Domenica dalle 18:30 alle 20:00</p>
             <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Ordina</a></span>
             <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fi-telephone"></i> 071 8853384</a></span>
         </div>
@@ -280,13 +280,13 @@
                 <meta itemprop="openingHours" content="We,Th,Fr,Sa,Su 19:00-23:00">
                 <div class="row">
                     <div class="large-5 medium-5 small-6 columns">
-                        <p>Mar-Dom</p>
+                        <p>Mer-Dom</p>
                     </div>
                     <div class="large-7 medium-7 small-6 columns">
                         <p>19&ensp;&ndash;&ensp;23</p>
                     </div>
                 </div>
-                <p><em>Chiuso Lunedì</em></p>
+                <p><em>Chiuso Lunedì e Martedì</em></p>
             </div>
             <div class="small-6 medium-3 large-3 columns">
                 <h4 class="subheader">Accettiamo</h4>
