--- a/contatti/index.html
+++ b/contatti/index.html
@@ -379,13 +379,13 @@
                 <meta itemprop="openingHours" content="We,Th,Fr,Sa,Su 19:00-23:00">
                 <div class="row">
                     <div class="large-5 medium-5 small-6 columns">
-                        <p>Mar-Dom</p>
+                        <p>Mer-Dom</p>
                     </div>
                     <div class="large-7 medium-7 small-6 columns">
                         <p>19&ensp;&ndash;&ensp;23</p>
                     </div>
                 </div>
-                <p><em>Chiuso Lunedì</em></p>
+                <p><em>Chiuso Lunedì e Martedì</em></p>
             </div>
             <div class="small-6 medium-3 large-3 columns">
                 <h4 class="subheader">Accettiamo</h4>
