--- a/menu/index.html
+++ b/menu/index.html
@@ -96,7 +96,7 @@
             <div class="panel-menu-n">
                 <div class="row">
                     <div class="large-12 medium-12 columns">
-                        <h4>Dal Martedì alla Domenica. Dalle 19:00 alle 23:00
+                        <h4>Dal Mercoledì alla Domenica. Dalle 19:00 alle 23:00
                             <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button extra-space-aside-tab-immagini"><i class="fi-telephone"></i> 071 8853384</a></span>
                         </h4>
                         <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Prenota</a></span>
@@ -735,13 +735,13 @@
                 <meta itemprop="openingHours" content="We,Th,Fr,Sa,Su 19:00-23:00">
                 <div class="row">
                     <div class="large-5 medium-5 small-6 columns">
-                        <p>Mar-Dom</p>
+                        <p>Mer-Dom</p>
                     </div>
                     <div class="large-7 medium-7 small-6 columns">
                         <p>19&ensp;&ndash;&ensp;23</p>
                     </div>
                 </div>
-                <p><em>Chiuso Lunedì</em></p>
+                <p><em>Chiuso Lunedì e Martedì</em></p>
             </div>
             <div class="small-6 medium-3 large-3 columns">
                 <h4 class="subheader">Accettiamo</h4>
