--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                 <meta itemprop="openingHours" content="We,Th,Fr,Sa,Su 19:00-23:00">
                 <div class="row">
                     <div class="large-5 medium-5 small-6 columns">
-                        <p>Mer-Dom</p>
+                        <p>Mer&ensp;&ndash;&ensp;Dom</p>
                     </div>
                     <div class="large-7 medium-7 small-6 columns">
                         <p>19&ensp;&ndash;&ensp;23</p>
