--- a/contatti/index.html
+++ b/contatti/index.html
@@ -378,10 +378,10 @@
                 <h4 class="subheader">Orari apertura</h4>
                 <meta itemprop="openingHours" content="We,Th,Fr,Sa,Su 19:00-23:00">
                 <div class="row">
-                    <div class="large-5 medium-5 small-6 columns">
-                        <p><p>Mer&ensp;&ndash;&ensp;Dom</p></p>
+                    <div class="large-6 medium-6 small-6 columns">
+                        <p>Mer&ensp;&ndash;&ensp;Dom</p>
                     </div>
-                    <div class="large-7 medium-7 small-6 columns">
+                    <div class="large-6 medium-6 small-6 columns">
                         <p>19&ensp;&ndash;&ensp;23</p>
                     </div>
                 </div>
