--- a/menu/cibo/cheesecake.html
+++ b/menu/cibo/cheesecake.html
@@ -180,10 +180,10 @@
                 <meta itemprop="openingHours" content="We,Th,Fr,Sa,Su 19:00-23:00">
                 <div class="row">
                     <div class="large-6 medium-6 small-6 columns">
-                        <p>Mer&ensp;&ndash;&ensp;Dom</p>
+                        <p>Mer&thinsp;&ndash;&thinsp;Dom</p>
                     </div>
                     <div class="large-6 medium-6 small-6 columns">
-                        <p>19&ensp;&ndash;&ensp;23</p>
+                        <p>19&thinsp;&ndash;&thinsp;23</p>
                     </div>
                 </div>
                 <p><em>Chiuso Lunedì e Martedì</em></p>
