--- a/contatti/team/giovanni-attilio.html
+++ b/contatti/team/giovanni-attilio.html
@@ -140,11 +140,8 @@
                 <h4 class="subheader">Orari apertura</h4>
                 <meta itemprop="openingHours" content="We,Th,Fr,Sa,Su 19:00-23:00">
                 <div class="row">
-                    <div class="large-6 medium-6 small-6 columns">
-                        <p>Mer&thinsp;&ndash;&thinsp;Dom</p>
-                    </div>
-                    <div class="large-6 medium-6 small-6 columns">
-                        <p>19&thinsp;&ndash;&thinsp;23</p>
+                    <div class="large-12 medium-12 small-12 columns">
+                        <p>Mer&ensp;&ndash;&ensp;Dom &emsp; 19&ensp;&ndash;&ensp;23</p>
                     </div>
                 </div>
                 <p><em>Chiuso Lunedì e Martedì</em></p>
