--- a/menu/index.html
+++ b/menu/index.html
@@ -609,10 +609,6 @@
                                 <p>tavignano</p>
                             </li>
                             <li>
-                                <h3>Cervidoni Rosso Piceno<span class="right"> 9</span></h3>
-                                <p>tavignano</p>
-                            </li>
-                            <li>
                                 <h3>Libenter Rosso Piceno<span class="right"> 13</span></h3>
                                 <p>tavignano</p>
                             </li>
@@ -643,8 +639,12 @@
                         <h2 class="subheader">Bollicine</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Spumante Extra Dry<span class="right">13</span></h3>
-                                <p>val d'oca </p>
+                                <h3>Prosecco Millesimato DOC<span class="right">14</span></h3>
+                                <p>bervini</p>
+                            </li>
+                            <li>
+                                <h3>Franciacorta Saten<span class="right">32</span></h3>
+                                <p>mosnel</p>
                             </li>
                         </ul>
                     </div>
