--- a/index.html
+++ b/index.html
@@ -132,12 +132,11 @@
                 <a role="button" href="http://www.beerstrot.it/eventi/"><img src="http://www.beerstrot.it/asset/img/medium/eventi.jpg" alt="Eventi" class="extra-space-image-tab-home"></a>
             </div>
             <div class="medium-6 large-6 medium-pull-6 large-pull-6 columns">
-                <p>A Beerstrot facciamo un sacco di eventi:</p>
+                <p>Eventi culinari a Ca' Vecchia Beerstrot:</p>
                 <ul class="no-margin-list-bullet">
-                    <li>Abbinamenti di cibi e birre</li>
-                    <li>Concerti con volume non assordante</li>
-                    <li>Spettacoli circensi</li>
-                    <li>Burlesque</li>
+                    <li>San Martino: le castagne e i funghi non mancano di certo</li>
+                    <li>San Valentino: vogliamoci un sacco di bene per una vita o un giorno</li>
+                    <li>Ultimo dell'anno</li>
                     <li>E tanto altro&hellip;</li>
                 </ul>
                 <a role="button" href="http://www.beerstrot.it/eventi/">Scopri i Prossimi Eventi &rarr;</a>
