--- a/menu/index.html
+++ b/menu/index.html
@@ -96,7 +96,7 @@
             <div class="panel-menu-n">
                 <div class="row">
                     <div class="large-12 medium-12 columns">
-                        <h4>Dal Mercoledì alla Domenica. Dalle 19:00 alle 23:00
+                        <h4>Dal Giovedì alla Domenica. Dalle 19:00 alle 23:00
                             <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button extra-space-aside-tab-immagini"><i class="fi-telephone"></i> 071 8853384</a></span>
                         </h4>
                         <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Prenota</a></span>
@@ -107,42 +107,42 @@
                 <div class="row">
                     <div class="large-12 medium-12 small-12 columns">
                         <h2 class="subheader">Per Stuzzicare</h2>
-                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
+                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">  
                             <li>
-                                <h3>Peperoncini Piccanti<span class="right">4,5</span></h3>    
-                                <p>peperoncini ripieni di formaggio avvolti nella pancetta</p>
-                            </li>
-                            <li>
-                                <h3>Bufala e Pomodorini<span class="right">6,5</span></h3>    
-                                <p>caprese con olio extra vergine di oliva </p>
+                                <h3>Alette di Pollo<span class="right">5,5</span></h3>    
+                                <p> in salsa piccante</p>
                             </li>
                             <li>
                                 <h3>Bocconcini di Pollo<span class="right">5</span></h3>    
                                 <p>petto di pollo di prima scelta impanato e fritto</p>
                             </li>
                             <li>
-                                <h3>Alette di Pollo<span class="right">5,5</span></h3>    
-                                <p> in salsa piccante</p>
-                            </li>
-                            <li>
                                 <h3>Nachos Supreme<span class="right">5</span></h3>    
                                 <p>tortilla con peperoncini e cheddar</p>
                             </li>
                             <li>
-                                <h3>Ratatouille<span class="right">4,5</span></h3>
-                                <p>verdure al forno</p>
+                                <h3>Peperoncini Piccanti<span class="right">4,5</span></h3>    
+                                <p>peperoncini ripieni di formaggio avvolti nella pancetta</p>
                             </li>
                             <li>
-                                <h3>Verdure Grigliate<span class="right">4,5</span></h3>
-                                <p>verdure di stagione grigliate</p>
+                                <h3>Cavoletti di Bruxelles<span class="right">4,5</span></h3>
+                                <p>brasati alla birra</p>
+                            </li>
+                            <li>
+                                <h3>Fagottini di Verza<span class="right">4,5</span></h3>
+                                <p>ripieni di zucca</p>
+                            </li>
+                            <li>
+                                <h3>Insalata Mista<span class="right">4</span></h3>    
+                                <p>con verdure di stagione</p>
                             </li>
                             <li>
                                 <h3>Patate Fritte<span class="right">3,5</span></h3>    
                                 <p>patate fritte a bastoncini</p>
                             </li>
                             <li>
-                                <h3>Insalata Mista<span class="right">4</span></h3>    
-                                <p>con verdure di stagione</p>
+                                <h3>Zuppa di Stagione<span class="right">5</span></h3>    
+                                <p>vellutata di zucca</p>
                             </li>
                         </ul>
                     </div>
@@ -158,20 +158,20 @@
                                 <p>360 grammi di manzo, cheddar, pancetta, cipolla caramellata, insalata, pomodorini confit</p>
                             </li>
                             <li>
-                                <h3><a href="http://www.beerstrot.it/menu/cibo/new-york.html">New York<span class="right">8,9 / doppio 14,9</span></a></h3>    
+                                <h3>New York<span class="right">8,9 / doppio 14,9</span></h3>    
                                 <p>180 grammi di manzo, cheddar, cipolla caramellata, insalata</p>
                             </li>
                             <li>
-                                <h3><a href="http://www.beerstrot.it/menu/cibo/diablo.html">Diablo<span class="right">8,9 / doppio 14,9</span></a></h3>    
+                                <h3>Diablo<span class="right">8,9 / doppio 14,9</span></h3>    
                                 <p>180 grammi di manzo, cheddar, pancetta, rucola, salsa piccante</p>
                             </li>
                             <li>
-                                <h3><a href="http://www.beerstrot.it/menu/cibo/deciso.html">Deciso<span class="right">8,9 / doppio 14,9</span></a></h3> 
+                                <h3>Deciso<span class="right">8,9 / doppio 14,9</span></h3> 
                                 <p>180 grammi di manzo, gorgonzola, pancetta, pomodorini confit</p>
                             </li>
                             <li>
-                                <h3>Estivo<span class="right">8,9 / doppio 14,9</span></h3> 
-                                <p>180 grammi di manzo, composta di feta e pomodorini, melanzana grigliata, rucola</p>
+                                <h3>Autunno<span class="right">8,9 / doppio 14,9</span></h3> 
+                                <p>180 grammi di manzo, composta di funghi, cipolla caramellata e panna</p>
                             </li>
                             <li>
                                 <h3>Mini Burger<span class="right">6</span></h3>    
@@ -183,37 +183,28 @@
                             </li>
                             <li>
                                 <h3>Vegetariano<span class="right">8</span></h3>    
-                                <p>180 grammi di hamburger di tofu e zucchine, pomodorini confit e rucola</p>
+                                <p>180 grammi di hamburger di quinoa, barbabietola rossa, rucola, salsa di senape e miele</p>
                             </li>
                         </ul>                      
                     </div>   
                 </div>
             </div>
-            <!-- <div class="panel-menu-n">
-                <div class="row">
-                    <div class="large-12 medium-12 small-12 columns">
-                        <h2 class="subheader">Zuppe <br></h2>
-                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
-                            <li>
-                                <h3>Vellutata di Carote<span class="right">4,5</span></h3>    
-                                <p>zuppa di carote con zenzero</p>
-                            </li>
-                        </ul>                      
-                    </div>
-                </div>
-            </div> -->
             <div class="panel-menu-2n">
                 <div class="row">
                     <div class="large-12 medium-12 small-12 columns">
                         <h2 class="subheader">Carni <br></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3><a href="http://www.beerstrot.it/menu/cibo/costine-in-salsa-bbq.html">Costine<span class="right">11,5</span></a></h3>    
+                                <h3>Chily<span class="right">9,5</span></h3>    
+                                <p>carne e fagioli serviti con polenta</p>
+                            </li>
+                            <li>
+                                <h3>Costine<span class="right">11,5</span></h3>    
                                 <p>costine di maiale al forno in salsa barbeque servite con patate fritte</p>
                             </li>
                             <li>
-                                <h3>Tagliata di Pollo<span class="right">12</span></h3>    
-                                <p>300 grammi di petto di pollo servito su letto di rucola</p>
+                                <h3>Pollo alla Griglia<span class="right">12</span></h3>    
+                                <p>300 grammi di petto marinato servito con coleslaw 12</p>
                             </li>
                             <li>
                                 <h3>Tagliata di Picanha<span class="right">19</span></h3>    
@@ -237,20 +228,16 @@
                                 <p>brownie di cioccolato e nocciole servito con crema di mascarpone</p>
                             </li>
                             <li>
-                                <h3><a href="http://www.beerstrot.it/menu/cibo/birramisu.html">Birramisù<span class="right">5</span></a></h3>
+                                <h3>Birramisù<span class="right">5</span></h3>
                                 <p>tiramisù alla birra stout</p>
                             </li>
                             <li>
-                                <h3>Panna Cotta<span class="right">5</span></h3>
-                                <p>panna cotta alla birra con sciroppo d’acero</p>
+                                <h3>Cheesecake<span class="right">5</span></h3>
+                                <p>cheesecake stile new york</p>
                             </li>
                             <li>
-                                <h3>Semifreddo al Torroncino<span class="right">5</span></h3>
-                                <p>servito con granella di nocciola e caramello</p>
-                            </li>
-                            <li>
-                                <h3>Semifreddo alla Nocciola<span class="right">5</span></h3>
-                                <p>servito con granella di nocciola e cioccolato</p>
+                                <h3>Sacher<span class="right">5</span></h3>
+                                <p>torta di cioccolato con marmellata di albicocca, servita con panna montata</p>
                             </li>
                         </ul>
                     </div>
@@ -732,13 +719,13 @@
             </div>
             <div class="small-6 medium-3 large-3 large-collapse columns" itemscope itemtype="http://schema.org/Restaurant">
                 <h4 class="subheader">Orari apertura</h4>
-                <meta itemprop="openingHours" content="We,Th,Fr,Sa,Su 19:00-23:00">
+                <meta itemprop="openingHours" content="Th,Fr,Sa,Su 19:00-23:00">
                 <div class="row">
                     <div class="large-12 medium-12 small-12 columns">
-                        <p>Mer&ensp;&ndash;&ensp;Dom &emsp; 19&ensp;&ndash;&ensp;23</p>
+                        <p>Gio&ensp;&ndash;&ensp;Dom &emsp; 19&ensp;&ndash;&ensp;23</p>
                     </div>
                 </div>
-                <p><em>Chiuso Lunedì e Martedì</em></p>
+                <p><em>Chiuso Lunedì, Martedì e Mercoledì</em></p>
             </div>
             <div class="small-6 medium-3 large-3 columns">
                 <h4 class="subheader">Accettiamo</h4>
