--- a/asporto/index.html
+++ b/asporto/index.html
@@ -283,7 +283,7 @@
                         <p>Gio&ensp;&ndash;&ensp;Dom &emsp; 19&ensp;&ndash;&ensp;23</p>
                     </div>
                 </div>
-                <p><em>Chiuso Lunedì Martedì, Mercoledì</em></p>
+                <p><em>Chiuso Lunedì, Martedì e Mercoledì</em></p>
             </div>
             <div class="small-6 medium-3 large-3 columns">
                 <h4 class="subheader">Accettiamo</h4>
